--- a/index.html
+++ b/index.html
@@ -1,72 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Web Sederhana</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #333;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        section {
-            padding: 20px;
-            margin: 20px;
-            background-color: white;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-        }
-    </style>
+    <title>Home - Web Pribadi</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <h1>Selamat Datang di Web Pribadi Saya</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tentang.html">Tentang</a></li>
+                <li><a href="portofolio.html">Portofolio</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<header>
-    <h1>Selamat Datang di Halaman Web Sederhana</h1>
-</header>
+    <main>
+        <section>
+            <h2>Home</h2>
+            <p>Halo! Selamat datang di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
+        </section>
+    </main>
 
-<nav>
-    <a href="#">Home</a>
-    <a href="#">Tentang</a>
-    <a href="#">Kontak</a>
-</nav>
-
-<section>
-    <h2>Tentang Kami</h2>
-    <p>Ini adalah contoh halaman web sederhana menggunakan HTML dan CSS. Anda bisa menyesuaikan konten ini sesuai kebutuhan Anda.</p>
-</section>
-
-<footer>
-    <p>&copy; 2024 Halaman Web Sederhana. Semua hak dilindungi.</p>
-</footer>
-
+    <footer>
+        <p>&copy; 2024 - Web Pribadi [Nama Anda]</p>
+    </footer>
 </body>
 </html>
+    
+
