--- a/portofolio.html
+++ b/portofolio.html
@@ -23,15 +23,16 @@
             <h2>Proyek Saya</h2>
             <p>Berikut adalah beberapa proyek yang pernah saya kerjakan:</p>
             <ul>
-                <li>Proyek 1: [Deskripsi Proyek 1]</li>
-                <li>Proyek 2: [Deskripsi Proyek 2]</li>
-                <li>Proyek 3: [Deskripsi Proyek 3]</li>
+                <li>Proyek 1: Aplikasi Todo List Berbasis Web (HTML, CSS, JavaScript)</li>
+                <li>Proyek 2: Sistem Pengelolaan Data Mahasiswa dengan PHP dan MySQL</li>
+                <li>Proyek 3: Website Respon Cepat untuk Konsultasi Akademik (Python Flask)</li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 - Web Pribadi [Nama Anda]</p>
+        <p>&copy; 2024 - Web Pribadi Suci Indriani</p>
     </footer>
 </body>
 </html>
+       
