--- a/portofolio.html
+++ b/portofolio.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h2>Proyek Saya</h2>
-            <p>Berikut adalah beberapa proyek yang pernah saya kerjakan:</p>
+            <p>Berikut adalah beberapa proyek yang pernah saya kerjakan dalam mata kuliah Programming:</p>
             <ul>
                 <li>Proyek 1: Aplikasi Todo List Berbasis Web (HTML, CSS, JavaScript)</li>
                 <li>Proyek 2: Sistem Pengelolaan Data Mahasiswa dengan PHP dan MySQL</li>
@@ -35,4 +35,3 @@
     </footer>
 </body>
 </html>
-       
