--- a/tentang.html
+++ b/tentang.html
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 - Web Pribadi [Nama Anda]</p>
+        <p>&copy; 2024 - Web Pribadi [suci indriani]</p>
     </footer>
 </body>
 </html>
