--- a/tentang.html
+++ b/tentang.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h2>Tentang Saya</h2>
-            <p>Saya adalah [suci indriani], seorang [mahasiswa s1 bisnis digital di universitas perintis indonesia ]. Saya memiliki keahlian dalam Pemrograman Web (HTML, CSS, JavaScript[].</p>
+            <p>Saya adalah [suci indriani], seorang [mahasiswa s1 bisnis digital di universitas perintis indonesia ].hobi/keahlian[HTML, CSS, JavaScript].</p>
         </section>
     </main>
 
