--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tentang.html">Tentang</a></li>
                 <li><a href="portofolio.html">Portofolio</a></li>
+                  <li><a href="portofolio.html">Latihan js</a></li>
             </ul>
         </nav>
     </header>
