--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <section>
-            <h2 font face="Arial">Home</h2>
+            <h2 style="font-family: Arial; color:blue;font-size:30px;">Home</h2>
             <p>Halo! Selamat datang di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
         </section>
     </main>
