--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     <main>
         <section>
-            <h2 style="font-family: Arial; color:blue;font-size:30px;">Home<br>ini adalah baris baru</h2>
+            <h2 style="font-family: Arial; color:yelow;font-size:30px;">Home<br>ini adalah baris baru</h2>
             <p>Halo! Selamat datang di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 - Web Pribadi [Nama Anda]</p>
+        <p>&copy; 2024 - Web Pribadi [suci indriani]</p>
     </footer>
 </body>
 </html>
