--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <main>
         <section>
-            <h2 style="font-family: Arial; color:yelow;font-size:30px;">Home<br>ini adalah baris baru</h2>
-            <p>Halo! Selamat datang di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
+            <h2 style="font-family: Arial; color:yellow;font-size:30px;">Home<br>ini adalah baris baru</h2>
+            <p><b>Halo! <i>Selamat datang</i></b> di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
         </section>
     </main>
 
