--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="tentang.html">Tentang</a></li>
                 <li><a href="portofolio.html">Portofolio</a></li>
                   <li><a href="portofolio.html">Latihan js</a></li>
+                 <li><a href="google.com">menuju ke google.com</a></li>
             </ul>
         </nav>
     </header>
