--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <section>
             <h2 style="font-family: Arial; color:yellow;font-size:30px;">Home<br>ini adalah baris baru</h2>
             <p><b>Halo! <i>Selamat datang</i></b> di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
+            <img src="logo upertis.jpg">
         </section>
     </main>
 
