--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h2 style="font-family: Arial; color:yellow;font-size:30px;">Home<br>ini adalah baris baru</h2>
             <p><b>Halo! <i>Selamat datang</i></b> di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
             <img src="upertis.png" width="300">
+            <iframe src="google.com"></iframe>
         </section>
     </main>
 
