--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2 style="font-family: Arial; color:yellow;font-size:30px;">Home<br>ini adalah baris baru</h2>
             <p><b>Halo! <i>Selamat datang</i></b> di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
             <img src="upertis.png" width="300">
-            <iframe src="https://www.google.com/webhp?hl=id&sa=X&ved=0ahUKEwiS8q3P38uJAxWAsVYBHce1HYsQPAgI"></iframe>
+            <iframe src="https://www.w3schools.com"height="200" width= "100%"></iframe>/iframe> 
         </section>
     </main>
 
