--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2 style="font-family: Arial; color:yellow;font-size:30px;">Home<br>ini adalah baris baru</h2>
             <p><b>Halo! <i>Selamat datang</i></b> di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
             <img src="upertis.png" width="300">
-            <iframe src="tentang.html" height="200" width= "35%"></iframe>
+            <br><iframe src="tentang.html" height="200" width= "35%"></iframe>
         </section>
     </main>
 
