--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             <p><b>Halo! <i>Selamat datang</i></b> di halaman pribadi saya. Saya seorang [suci indriani] dan ini adalah web sederhana saya.</p>
             <img src="upertis.png" width="300">
             <br><iframe src="tentang.html" height="200" width= "35%"></iframe>
+            <table border="1">
+                <td>cell 1</td>
+                <td>cell 2</td>
+                <td>cell 3</td>
+                <td>cell 4</td>
+            </table>
+                
         </section>
     </main>
 
