--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
             <img src="upertis.png" width="300">
             <br><iframe src="tentang.html" height="200" width= "35%"></iframe>
             <table border="1">
+                <caption> judul tabel</caption>
                 <tr>
                 <td>cell 1</td>
+                <td>cell 2</td>
+                <td>cell 3</td>
+                <td>cell 4</td>
+                </tr>
+                <tr>
+                    <td>cell 1</td>
                 <td>cell 2</td>
                 <td>cell 3</td>
                 <td>cell 4</td>
